Fix quiz magnifier on tablet and desktop

--- a/src/pages/QuizPage.module.css
+++ b/src/pages/QuizPage.module.css
@@ -572,12 +572,18 @@
 .playTouchAssistFrame {
   overflow: hidden;
   touch-action: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 .playTouchAssistShell {
   position: relative;
   overflow: visible;
   touch-action: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 .playTouchAssistAnchor {
